--- a/mendicants/cover.css
+++ b/mendicants/cover.css
@@ -29,6 +29,8 @@ body {
   height: 100%;
   background-image: url(images/MendicantsJump.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 body {
   color: #fff;
