--- a/mendicants/cover.css
+++ b/mendicants/cover.css
@@ -27,7 +27,6 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-image: url(images/MendicantsJump.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -36,6 +35,14 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
+}
+
+.bg-jump {
+  background-image: url(images/MendicantsJump.jpg);
+}
+
+.bg-london {
+  background-image: url(images/LondonMarket.jpg);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -133,25 +140,31 @@ body {
 /*
  * Spotify button
  */
-.btn-flickr {
+.btn-spotify {
   color:#fff;
-  background-color: #ff0084;
+  background-color: #81b71a;
   border-color: rgba(0,0,0,0.2)}
-.btn-flickr:hover,
-.btn-flickr:focus,
-.btn-flickr:active,
-.btn-flickr.active,
-.open>.dropdown-toggle.btn-flickr {
+.btn-spotify:hover,
+.btn-spotify:focus,
+.btn-spotify:active,
+.btn-spotify.active,
+.open>.dropdown-toggle.btn-spotify {
   color:#fff;
-  background-color:#cc006a;
+  background-color: #19b9b7;
   border-color:rgba(0,0,0,0.2)
 }
-.btn-flickr:active,
-.btn-flickr.active,
-.open>.dropdown-toggle.btn-flickr {
+.btn-spotify:active,
+.btn-spotify.active,
+.open>.dropdown-toggle.btn-spotify {
   background-image:none}
-.btn-flickr.disabled,.btn-flickr[disabled],fieldset[disabled] .btn-flickr,.btn-flickr.disabled:hover,.btn-flickr[disabled]:hover,fieldset[disabled] .btn-flickr:hover,.btn-flickr.disabled:focus,.btn-flickr[disabled]:focus,fieldset[disabled] .btn-flickr:focus,.btn-flickr.disabled:active,.btn-flickr[disabled]:active,fieldset[disabled] .btn-flickr:active,.btn-flickr.disabled.active,.btn-flickr[disabled].active,fieldset[disabled] .btn-flickr.active{background-color:#ff0084;border-color:rgba(0,0,0,0.2)}
-.btn-flickr .badge{color:#ff0084;background-color:#fff}
+.btn-spotify.disabled,
+.btn-spotify[disabled],
+fieldset[disabled] .btn-spotify,
+.btn-spotify.disabled:hover,
+.btn-spotify[disabled]:hover,
+fieldset[disabled] .btn-spotify:hover,
+.btn-spotify.disabled:focus,.btn-spotify[disabled]:focus,fieldset[disabled] .btn-spotify:focus,.btn-spotify.disabled:active,.btn-spotify[disabled]:active,fieldset[disabled] .btn-spotify:active,.btn-spotify.disabled.active,.btn-spotify[disabled].active,fieldset[disabled] .btn-spotify.active{background-color:#ff0084;border-color:rgba(0,0,0,0.2)}
+.btn-spotify .badge{color:#ff0084;background-color:#fff}
 
 
 /*
