--- a/mendicants/cover.css
+++ b/mendicants/cover.css
@@ -30,6 +30,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: #C04453;
 }
 body {
   color: #fff;
