moved stuff around in v2

--- a/mendicants-v2/less/creative.less
+++ b/mendicants-v2/less/creative.less
@@ -288,6 +288,10 @@ header {
     }
 }
 
+.events {
+    padding-bottom: 20px;
+}
+
 // Bootstrap Overrides
 .text-primary {
     color: @theme-primary;
