--- a/mendicants-v2/css/creative.css
+++ b/mendicants-v2/css/creative.css
@@ -262,6 +262,9 @@ header .header-content .header-content-inner p {
 .call-to-action .btn-social-icon {
   font-size: 50px;
 }
+.events {
+  padding-bottom: 20px;
+}
 .text-primary {
   color: #c04453;
 }
