--- a/mendicants-v2/css/creative.css
+++ b/mendicants-v2/css/creative.css
@@ -144,7 +144,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  visibility: hidden;
   text-align: center;
   color: white;
 }
