--- a/mendicants-v2/less/creative.less
+++ b/mendicants-v2/less/creative.less
@@ -159,7 +159,8 @@ header {
     min-height: auto;
     .background-cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
+    // background-image: url('../img/header.jpg');
+    visibility: hidden;
     text-align: center;
     color: white;
     .header-content {
