entire page fade-in

--- a/mendicants-v2/css/creative.css
+++ b/mendicants-v2/css/creative.css
@@ -5,6 +5,7 @@ body {
 }
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  visibility: hidden;
 }
 hr {
   border-color: #c04453;
@@ -144,7 +145,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  visibility: hidden;
+  background-image: url('../img/header.jpg');
   text-align: center;
   color: white;
 }
