--- a/mendicants-v2/less/creative.less
+++ b/mendicants-v2/less/creative.less
@@ -10,6 +10,7 @@ body {
 
 body {
     .serif-font;
+    visibility: hidden;
 }
 
 hr {
@@ -159,8 +160,8 @@ header {
     min-height: auto;
     .background-cover;
     background-position: center;
-    // background-image: url('../img/header.jpg');
-    visibility: hidden;
+    background-image: url('../img/header.jpg');
+    // visibility: hidden;
     text-align: center;
     color: white;
     .header-content {
