--- a/mendicants-v2/less/creative.less
+++ b/mendicants-v2/less/creative.less
@@ -30,6 +30,13 @@ a {
     &:focus {
         color: darken(@theme-primary, 10%);
     }
+    &.auditions {
+        color: darken(white, 20%);
+        &:hover,
+        &:focus {
+            color: white;
+        }
+    }
 }
 
 h1,
