added auditions link

--- a/mendicants-v2/css/creative.css
+++ b/mendicants-v2/css/creative.css
@@ -32,6 +32,10 @@ a.auditions:hover,
 a.auditions:focus {
   color: white;
 }
+#auditions {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 h1,
 h2,
 h3,
